--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "bootstrap": "5.3.3",
+    "idb": "8.0.0",
+    "solid-bootstrap": "1.0.20",
     "solid-js": "1.8.22",
     "three": "0.168.0"
   },
